# chrona

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  settings.html  vite.config.js
.github/workflows/: release.yml
docs/: DEVELOPMENT.md
scripts/: gen-icon.mjs
src/: main.jsx  settings-main.jsx  settings.css  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: actions.rs  lib.rs  main.rs  menu.rs  updater.rs  weather.rs  window_fx.rs
src/components/: App.jsx  Settings.jsx  clock-widget.jsx  controls.jsx  weather-fx.jsx
src/lib/: settings.js  weather.js  window.js
