[package]
name = "chrona"
version = "0.1.2"
description = "Chrona — a frameless desktop clock + live-weather glass widget"
authors = ["qBitnaut"]
edition = "2021"
rust-version = "1.77"

# The library is what Tauri's (mobile-ready) entrypoint calls into.
[lib]
name = "chrona_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-store = "2.4.3"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-updater = "2.10.1"
tauri-plugin-dialog = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "sync", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[target."cfg(windows)".dependencies]
window-vibrancy = "0.7"
raw-window-handle = "0.6"
windows-sys = { version = "0.60", features = ["Win32_Foundation", "Win32_Graphics_Dwm", "Win32_Graphics_Gdi"] }

[profile.release]
panic = "abort"     # smaller binary; no unwinding tables
codegen-units = 1   # better optimization
lto = true          # link-time optimization
opt-level = "s"     # optimize for size
strip = true        # strip symbols
